# entity-recognition

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
apps/: demo_local.py  demo_triton.py  local_run.py  triton_run.py
configs/: config.yaml
configs/data/: gmb.yaml
configs/model/: bert_cased.yaml
data/: .gitignore  download.py  ner_dataset.csv.dvc
model_repository/bert_ner/: config.pbtxt.bak
model_repository/bert_ner_onnx/: config.pbtxt
model_repository/bert_ner_tensorrt/: config.pbtxt
ner/: commands.py  dataset.py  model.py  utils.py
scripts/: infer.py  infer_tensorrt.py  run_triton_server.sh  to_onnx.py  to_tensorrt.py  to_tensorrt.sh  train.py
src/: dataset.py  model.py  utils.py
