# pyproject.toml
[tool.poetry]
name = "ner-project"
version = "0.1.0"
description = "BERT NER MLOps Project on 8x A100"
authors = ["Shibaev Aleksand shibaev.am@phystech.edu"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

torch = "^2.1.0"
transformers = "^4.35.0"
pytorch-lightning = "^2.1.0"
hydra-core = "^1.3.2"
scikit-learn = "^1.3.0"

dvc = {extras = ["s3"], version = "^3.0.0"}
wandb = "^0.16.0"
mlflow = "^2.17.0"
matplotlib = "^3.8.0"

pandas = "^2.1.0"
seqeval = "^1.2.2"

onnx = "^1.15.0"

onnxruntime = {version = "^1.16.0", markers = "sys_platform == 'darwin' or sys_platform == 'win32'"}

onnxruntime-gpu = {version = "^1.16.0", markers = "sys_platform == 'linux'"}

pycuda = {version = "^2025.1", markers = "sys_platform == 'linux'"}

streamlit = "^1.31.0"

typer = "^0.20.1"

numpy = "<2.0.0"
onnxscript = "^0.5.7"
tensorrt = {version = "^10.14.1.48.post1", markers = "sys_platform == 'linux'"}

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
